# xibabel

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  devel_requirements.txt  doc_requirements.txt  example.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  test_requirements.txt  xi_accessor.Rmd
.github/workflows/: coverage.yml  doc-build.yml  test.yml
basic_xibabel/: index.html
doc/: conf.py  index.rst  links.md  make_release.md  notes.md
docs/: .gitignore  glm_with_xibabel.Rmd  index.md  make_release.md  slice_timing.Rmd
experiments/: .gitignore  basic_xibabel.Rmd  glm_with_xibabel.Rmd  rethinking_the_image_api.Rmd  scripting_again.py  scripting_an_analysis.Rmd  slice_timing.Rmd  xarray_experiments.Rmd  xarray_experiments.ipynb  xi_accessor.Rmd
glm_with_xibabel/: index.html
make_release/: index.html
slice_timing/: index.html
src/xibabel/: __init__.py  loaders.py  xutils.py
src/xibabel/bench/: bench_nib_xib_load.py
src/xibabel/testing/: .gitignore  __init__.py  __main__.py  fetcher.py  test_files.yml  test_sets.yml
src/xibabel/tests/: conftest.py  markers.py  run_server.py  test_loaders.py  test_merge.py  test_scripting.py  test_testing.py
xi_accessor/: index.html
xibabel/: __init__.py  loaders.py
xibabel/bench/: bench_nib_xib_load.py
xibabel/testing/: __init__.py  test_files.yml  test_sets.yml
xibabel/tests/: test_loaders.py  test_scripting.py
